Probably Last Commit

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <main class="bg-blue-50">
         <section class="grid sm:grid-cols-4 grid-cols-1 gap-8 mx-2.5 sm:mx-16 py-6">
             <!-- 1 -->
-            <div class="bg-white p-8 rounded-lg">
+            <div class="bg-white p-8 rounded-lg card">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
@@ -82,7 +82,7 @@
                     <p class="text-gray-500">
                         National Emergency
                     </p>
-                    <h1 class="font-bold text-4xl mb-2 mt-6">
+                    <h1 class="description font-bold text-4xl mb-2 mt-6">
                         999
                     </h1>
                     <p class="bg-gray-100 text-gray-500 py-1.5 px-4 rounded-4xl inline-block mb-6">
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <!-- 2 -->
-            <div class="bg-white p-8 rounded-lg">
+            <div class="bg-white p-8 rounded-lg card">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-blue-100">
@@ -117,7 +117,7 @@
                     <p class="text-gray-500">
                         Police
                     </p>
-                    <h1 class="font-bold text-4xl mb-2 mt-6">
+                    <h1 class="description font-bold text-4xl mb-2 mt-6">
                         999
                     </h1>
                     <p class="bg-gray-100 text-gray-500 py-1.5 px-4 rounded-4xl inline-block mb-6">
@@ -136,7 +136,7 @@
                 </div>
             </div>
             <!-- 3 -->
-            <div class="bg-white p-8 rounded-lg">
+            <div class="bg-white p-8 rounded-lg card">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
@@ -152,7 +152,7 @@
                     <p class="text-gray-500">
                         Fire Service
                     </p>
-                    <h1 class="font-bold text-4xl mb-2 mt-6">
+                    <h1 class="description font-bold text-4xl mb-2 mt-6">
                         999
                     </h1>
                     <p class="bg-gray-100 text-gray-500 py-1.5 px-4 rounded-4xl inline-block mb-6">
@@ -183,7 +183,7 @@
                 </div>
             </div>
             <!-- 4 -->
-            <div class="bg-white p-8 rounded-lg">
+            <div class="bg-white p-8 rounded-lg card">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
@@ -199,7 +199,7 @@
                     <p class="text-gray-500">
                         Ambulance
                     </p>
-                    <h1 class="font-bold text-4xl mb-2 mt-6">
+                    <h1 class="description font-bold text-4xl mb-2 mt-6">
                         1994-999999
                     </h1>
                     <p class="bg-gray-100 text-gray-500 py-1.5 px-4 rounded-4xl inline-block mb-6">
@@ -218,7 +218,7 @@
                 </div>
             </div>
             <!-- 5 -->
-            <div class="bg-white p-8 rounded-lg">
+            <div class="bg-white p-8 rounded-lg card">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
@@ -234,7 +234,7 @@
                     <p class="text-gray-500">
                         Women & Child Helpline
                     </p>
-                    <h1 class="font-bold text-4xl mb-2 mt-6">
+                    <h1 class="description font-bold text-4xl mb-2 mt-6">
                         109
                     </h1>
                     <p class="bg-gray-100 text-gray-500 py-1.5 px-4 rounded-4xl inline-block mb-6">
@@ -253,7 +253,7 @@
                 </div>
             </div>
             <!-- 6 -->
-            <div class="bg-white p-8 rounded-lg">
+            <div class="bg-white p-8 rounded-lg card">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
@@ -269,7 +269,7 @@
                     <p class="text-gray-500">
                         Anti-Corruption
                     </p>
-                    <h1 class="font-bold text-4xl mb-2 mt-6">
+                    <h1 class="description font-bold text-4xl mb-2 mt-6">
                         106
                     </h1>
                     <p class="bg-gray-100 text-gray-500 py-1.5 px-4 rounded-4xl inline-block mb-6">
@@ -288,7 +288,7 @@
                 </div>
             </div>
             <!-- 7 -->
-            <div class="bg-white p-8 rounded-lg">
+            <div class="bg-white p-8 rounded-lg card">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
@@ -304,7 +304,7 @@
                     <p class="text-gray-500">
                         Electricity Outage
                     </p>
-                    <h1 class="font-bold text-4xl mb-2 mt-6">
+                    <h1 class="description font-bold text-4xl mb-2 mt-6">
                         16216
                     </h1>
                     <p class="bg-gray-100 text-gray-500 py-1.5 px-4 rounded-4xl inline-block mb-6">
@@ -323,7 +323,7 @@
                 </div>
             </div>
             <!-- 8 -->
-            <div class="bg-white p-8 rounded-lg">
+            <div class="bg-white p-8 rounded-lg card">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
@@ -339,7 +339,7 @@
                     <p class="text-gray-500">
                         Brac
                     </p>
-                    <h1 class="font-bold text-4xl mb-2 mt-6">
+                    <h1 class="description font-bold text-4xl mb-2 mt-6">
                         16445
                     </h1>
                     <p class="bg-gray-100 text-gray-500 py-1.5 px-4 rounded-4xl inline-block mb-6">
@@ -358,7 +358,7 @@
                 </div>
             </div>
             <!-- 9 -->
-            <div class="bg-white p-8 rounded-lg">
+            <div class="bg-white p-8 rounded-lg card">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-yellow-100">
@@ -374,7 +374,7 @@
                     <p class="text-gray-500">
                         Bangladesh Railway
                     </p>
-                    <h1 class="font-bold text-4xl mb-2 mt-6">
+                    <h1 class="description font-bold text-4xl mb-2 mt-6">
                         163
                     </h1>
                     <p class="bg-gray-100 text-gray-500 py-1.5 px-4 rounded-4xl inline-block mb-6">
