--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
             </h2>
         </div>
         <div class="flex gap-5">
-            <p class="flex bg-blue-50 px-9 py-2.5 font-semibold rounded-4xl gap-2.5 justify-center items-center">
+            <p class="flex bg-blue-50 px-9 max-[450px]:px-5 max-[350px]:px-3 py-2.5 font-semibold rounded-4xl gap-2.5 justify-center items-center">
                 <span id="heart">
                     0
                 </span>
                 <img class="max-h-8 max-w-8" src="assets/heart.png" alt="Heart">
             </p>
-            <p class="flex bg-blue-50 px-9 py-3.5 font-semibold rounded-4xl gap-2.5 justify-center items-center">
+            <p class="flex bg-blue-50 px-9 max-[450px]:px-5 max-[350px]:px-3 py-3.5 font-semibold rounded-4xl gap-2.5 justify-center items-center">
                 <span id="coin" class="inter">
                     100
                 </span>
                 <img class="max-h-7 max-w-7" src="assets/coin.png" alt="Coin">
             </p>
             <p
-                class="flex bg-green-500 gap-2 px-9 py-3.5 text-white font-semibold rounded-4xl justify-center items-center">
+                class="flex bg-green-500 gap-2 px-9 max-[450px]:px-5 max-[350px]:px-3 py-3.5 text-white font-semibold rounded-4xl justify-center items-center">
                 <span id="copy" class="inter">
                     0
                 </span>
@@ -62,7 +62,7 @@
         <h1 class="text-4xl my-2.5">
             Emergency Service Directory
         </h1>
-        <p class="text-2xl">
+        <p class="text-2xl sm:text-center">
             Government Emergency Services at Your Fingertip – A Project by Government of the People’s Republic of
             Bangladesh
         </p>
@@ -70,9 +70,9 @@
 
 
     <main class="bg-blue-50">
-        <section class="grid sm:grid-cols-4 grid-cols-1 gap-8 mx-2.5 sm:mx-16 py-6">
+        <section class="grid sm:grid-cols-2 xl:grid-cols-4 grid-cols-1 gap-8 mx-2.5 sm:mx-16 py-6">
             <!-- 1 -->
-            <div class="bg-white p-8 rounded-lg card">
+            <div class="bg-white p-8 rounded-lg card sm:order-1">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <!-- 2 -->
-            <div class="bg-white p-8 rounded-lg card">
+            <div class="bg-white p-8 rounded-lg card sm:order-3">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-blue-100">
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <!-- 3 -->
-            <div class="bg-white p-8 rounded-lg card">
+            <div class="bg-white p-8 rounded-lg card sm:order-4">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
@@ -177,7 +177,7 @@
                 </div>
             </div>
             <!-- extra -->
-            <div class="row-span-3 bg-white p-6 rounded-lg order-first sm:order-none" id="add">
+            <div class="row-span-3 sm:row-span-9 bg-white p-6 rounded-lg order-first sm:order-2 xl:order-4" id="add">
                 <div class="flex justify-between items-center mb-2">
                     <h1 class="text-2xl font-semibold">
                         <i class="fa-regular fa-clock text-gray-500"></i>
@@ -189,7 +189,7 @@
                 </div>
             </div>
             <!-- 4 -->
-            <div class="bg-white p-8 rounded-lg card">
+            <div class="bg-white p-8 rounded-lg card sm:order-5">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
@@ -224,7 +224,7 @@
                 </div>
             </div>
             <!-- 5 -->
-            <div class="bg-white p-8 rounded-lg card">
+            <div class="bg-white p-8 rounded-lg card sm:order-6">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
@@ -259,7 +259,7 @@
                 </div>
             </div>
             <!-- 6 -->
-            <div class="bg-white p-8 rounded-lg card">
+            <div class="bg-white p-8 rounded-lg card sm:order-7">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
@@ -294,7 +294,7 @@
                 </div>
             </div>
             <!-- 7 -->
-            <div class="bg-white p-8 rounded-lg card">
+            <div class="bg-white p-8 rounded-lg card sm:order-8">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
@@ -329,7 +329,7 @@
                 </div>
             </div>
             <!-- 8 -->
-            <div class="bg-white p-8 rounded-lg card">
+            <div class="bg-white p-8 rounded-lg card sm:order-9">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-red-100">
@@ -364,7 +364,7 @@
                 </div>
             </div>
             <!-- 9 -->
-            <div class="bg-white p-8 rounded-lg card">
+            <div class="bg-white p-8 rounded-lg card sm:order-10">
                 <div>
                     <div class="flex justify-between items-center">
                         <div class="px-3.5 py-3.5 max-h-16 max-w-16 rounded-2xl bg-yellow-100">
